<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BSN</string>
    <string name="facebook_app_id">1148275261959606</string>

    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="telephoneNumber">Phone number</string>
    <string name="passWord">Password</string>
    <string name="confirmPassWord">Confirm password</string>
    <string name="acceptTerm">Accept term</string>
    <string name="signUp">Sign up</string>
    <string name="rememberPassword">Remember password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="createAnAccount">Create an account</string>
    <string name="changeLanguage">Change language</string>
    <string name="notifications">Notifications</string>
    <string name="sendFeedback">Send feedback</string>
    <string name="aboutUs">About us</string>
    <string name="join">Join</string>
    <string name="detailEvent">Detail event</string>
    <string name="chooseLanguage">Choose language</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="setOnline">Set online</string>
    <string name="nickName">Nickname</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="companyName">Company name</string>
    <string name="companyAddress">Company address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="aboutYou">About you</string>
    <string name="logOut">Log out</string>
    <string name="addFriend">Add friend</string>
    <string name="chat">Chat</string>
    <string name="deleteAccount">Delete account</string>
    <string name="send">Send</string>
    <string name="fillUsernamePassword">Fill email and password!</string>
    <string name="wrongFormatEmail">Wrong email format!</string>
    <string name="act_forgotpw_notification">Fill email to restore password!</string>
    <string name="confirm">Confirm</string>
    <string name="fillAllData">Please fill all data!</string>
    <string name="phoneLength">Phone number must have 10 or 11 letters!</string>
    <string name="passwordLength">Password must contain more than 6 letters!</string>
    <string name="passwordDontMatch">Password does not match!</string>
    <string name="registerSuccess">Register success!</string>
    <string name="emailExists">Email exists, please try again!</string>
    <string name="registerFail">Register failure, please try again!</string>
    <string name="cannotFindUser">Can not find user, please try again!</string>
    <string name="editProfileFail">Edit profile fail, please try again!</string>
    <string name="cannotLoadUser">Can not load user, please try again!</string>
    <string name="cannotLoadDetailEvent">Can not load detail event please try again!</string>
    <string name="canNotGetData">Can not get data, please try again!</string>
    <string name="sendEmailVerify">Register success! Please verify email before using</string>
    <string name="verifyFirst">Please verify email before using this feature!</string>
    <string name="notification">Notification</string>
    <string name="friendRequest">Friend requests</string>

    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>

    <string name="throwError">Error! Please try again </string>

    <string name="contacts">Contacts</string>
    <string name="requests">Requests</string>

    <string name="confirmUnfriend">Do you want to delete this person from your friend lists?</string>
    <string name="confirmLogOut">Are you sure?</string>

    <string name="defaultLanguage">Default</string>
    <string name="reload">Reload</string>

    <string name="sendEmailForget">Email has already been used! Please check email</string>
    <string name="loading">Loading...</string>

    <string name="hasRequest">Sent you friend request</string>
    <string name="hasAcceptFriend">Accept</string>
    <string name="sentImage">Sent image</string>
    <string name="receiveImage">Received image</string>
    <string name="sendRequestSuccessfully">Sent friend request successfully!</string>
    <string name="search">Search</string>


    <string name="GPSTitle">GPS setting</string>
    <string name="GPSContent">GPS function is off, do you want to turn on the GPS function?</string>
    <string name="setting">Setting</string>
    <string name="huy">Cancel</string>

    <string name="call">Call</string>
    <string name="mail">Mail</string>



    <!--Chưa duyệt content-->
    <string name="change_group_picture">Thay đổi ảnh nhóm</string>
    <string name="change_group_name">Đổi tên</string>
    <string name="leave_group">Rời khỏi nhóm</string>
    <string name="openGallery">Chọn ảnh</string>
    <string name="openCamera">Chụp ảnh</string>

    <string name="outGroup">Rời khỏi cuộc trò chuyện</string>
    <string name="confirmOutGroup">Bạn có chắc chắn muốn rời khỏi cuộc trò chuyện này không? Bạn sẽ không nhận được tin nhắn mới nữa</string>
    <string name="groupName">Thay đổi tên nhóm</string>
    <string name="createGroup">Tạo nhóm</string>
    <string name="addMember">Thêm thành viên</string>
    <string name="memberJoin">Danh sách người tham gia</string>
    <string name="kickMember">Mời khỏi nhóm</string>
    <string name="seeProfile">Xem trang cá nhân</string>

    <!--Chưa duyệt content-->
    <string-array name="arr_language">
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>

    <string name="loginFirst">Please log in before using this feature!</string>

    <!--Menu navigation-->
    <string name="nav_home">Home</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_room">Chat room</string>
    <string name="nav_member_around">Member Around Here</string>
    <string name="nav_discount">Discount</string>
    <string name="nav_news">News</string>
    <string name="nav_events">Events</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>


    <string name="require">Required</string>

    <!--Title-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Contacts</item>
        <item>Messages</item>
        <item>Chat Room</item>
        <item>Member Around Here</item>
        <item>Discount</item>
        <item>News</item>
        <item>Events</item>
        <item>Settings</item>
    </string-array>

    <string name="projectName">Name Project</string>
    <string name="addAuthor">Add Author</string>

    <string name="applyProject">Apply Project</string>
    <string name="emailOrPhoneNumber">Phone number</string>
    <string name="messageInviteFriend">Message invite friend</string>
    <string name="homePage">Home Page</string>
    <string name="allProject">All Project</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>

    <string name="inputPhoneNumber">Input phone number</string>

    <string name="unknowName">Unknow name</string>
    <string name="acceptTerms">You must accept terms and conditions</string>


    <string name="nav_add_friend">Add Friend</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="dangNhapKhongThanhCong">Login fail!</string>
    <string name="messageHint">Tape a message...</string>


    <string name="title_activity_maps">Map</string>
    <string name="title_activity_chat_group_info">Chi tiết nhóm</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>

