<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBSN"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/join"
            android:textColor="#fcfcfc" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_gravity="center"
                android:background="@drawable/button_click_white"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/call"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_gravity="center"
                android:background="@drawable/button_click_white"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/mail"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>