<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    tools:context=".forget_password.view.ForgotPasswordActivity">

    <include layout="@layout/toolbar"></include>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white" />

    <ImageView
        android:id="@+id/act_forgotpw_ivIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/icon_forgot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_forgotpw_ivIcon"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/act_forgotpw_notification"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_drawable"
                android:layout_height="@dimen/icon_drawable"
                android:layout_gravity="center"
                android:src="@drawable/icon_mail" />

            <EditText
                android:id="@+id/edt_forget_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorBSN" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white" />


        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_forget_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/boder_button"
            android:text="@string/confirm"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
