<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.view.LoginActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height">

        <com.hbbmobile.bsnapp.base.view.IconTextView
            android:id="@+id/txtBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/fa_chevron_left"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/header"
        android:background="@color/white" />
    <!--Content-->


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/act_main_ivIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_main_ivIcon"
            android:layout_marginTop="30dp"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_mail" />

                <EditText
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_pass" />

                <EditText
                    android:id="@+id/edtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:hint="@string/passWord"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />


            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:buttonTint="@color/colorBSN"
                android:hint="@string/rememberPassword"
                android:textColorHint="@color/colorBSN" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/boder_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/act_main_tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:text="@string/forgotPassword"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/act_main_tvCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center|left"
                    android:paddingRight="10dp"
                    android:text="@string/createAnAccount"
                    android:textColor="@color/colorBSN" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/btnfb"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/boder_button"
                    android:scaleType="fitXY"
                    android:src="@drawable/iconfb" />

                <ImageView
                    android:id="@+id/btngm"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icongmail" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
