<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    tools:context=".create_an_account.view.CreateAnAccountActivity">

    <include layout="@layout/toolbarback"></include>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white" />

    <ImageView
        android:id="@+id/act_createacc_ivIcon"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_send_feedback" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_user" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:hint="@string/email"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_description" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/description"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/btn_send"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            android:background="@drawable/boder_button"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>


</LinearLayout>